1. fixed gaps between checkboxes to avoid overlapping 2. fixed the table bugs 3. added "In case of IVF/ICSI; number of embryos replaced:" field in pregnancy form 4. added NA option to female marriage field in general history

--- a/custom/ecare_medical_history/static/src/css/custom.css
+++ b/custom/ecare_medical_history/static/src/css/custom.css
@@ -462,8 +462,7 @@ button{
 }
 
 .table-responsive > table > thead > tr > th{
-    width: 11.88% !important;
-    max-width:fit-content !important;
+    max-width:100% !important;
     max-height: auto !important;
     height: auto !important;
 }
@@ -490,5 +489,14 @@ padding-right:16px;
 
 #genital_examination_section div[aria-atomic="true"]{
 display:flex;
+gap:20px;
+}
+
+.custom_gap div[aria-atomic="true"]{
+display:flex;
+gap:20px;
+}
+
+.custom_gap {
 gap:20px;
 }
